# codewikitap

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  README.tr.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.workspace.ts
.claude-plugin/: marketplace.json  (+1 more)
tests/fixtures/manifests/: Cargo.toml  Directory.Packages.props  Gemfile  MyApp-cpm.csproj  MyApp.csproj  composer.json  go.mod  package.json  pom-aggregator.xml  pom-with-bom-import-spring.xml  pom-with-broken-bom-import.xml  pom-with-circular-property.xml  pom-with-forward-property-ref.xml  pom-with-management.xml  pom.xml  pyproject-poetry.toml  pyproject.toml  requirements.txt
tests/fixtures/manifests/Cargo-glob/: Cargo.toml
tests/fixtures/manifests/Cargo-workspace/: Cargo.toml
tests/fixtures/manifests/MultiProject/: Directory.Packages.props  ProjB.csproj
tests/fixtures/manifests/aggregator-pom-multi/: pom.xml
tests/fixtures/manifests/aggregator-pom-multi/core/: pom.xml
tests/fixtures/manifests/aggregator-pom-multi/web/: pom.xml
tests/fixtures/manifests/go-work-workspace/: go.work
tests/fixtures/manifests/go-work-workspace/modA/: go.mod
tests/fixtures/manifests/gradle/: libs.versions.toml
tests/fixtures/manifests/gradle-multi-module/: settings.gradle.kts
tests/fixtures/manifests/npm-workspaces/: package.json
tests/fixtures/manifests/pnpm-workspace/: package.json  pnpm-workspace.yaml
tests/fixtures/manifests/sln-cpm-divergent/: MyApp.sln
tests/fixtures/manifests/sln-with-csprojs/: MyApp.sln
(+214 files in other folders)
